圖片改連結

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   
 <section class="navbar">
   <div class="container p-3 f-r-sb-c ">
-    <div class="logo fz-0 ps-1"><img src="./images/logo-all-dark.svg" alt="logo" class="img"></div>
+    <div class="logo fz-0 ps-1"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg" alt="logo" class="img"></div>
     <div class="warp f-r-sb-c pe-1">
       <ul class="pe-6">
         <li class="btn p-3">首頁</li>
         <li class="btn p-3">甜點</li>
         <li class="btn p-3">登入</li>
       </ul>
-      <div class="cart btn fz-0"><img src="./images/shopping_cart.png" alt="cart" class="img"></div>
+      <div class="cart btn fz-0"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/shopping_cart.png" alt="cart" class="img"></div>
     </div>
   </div>
 </section>
 
 <section class="banner">
-  <div class="container p-3 pt-0 fz-0"><img src="./images/banner.png" alt="banner" class="img px-1"></div>
+  <div class="container p-3 pt-0 fz-0"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/banner.png" alt="banner" class="img px-1"></div>
 </section>
 
 
@@ -48,11 +48,11 @@
 
       <div class="pagination f-r-e-c p-1">
         <ul class="f-r-e-c">
-          <li class="btn f-r-c-c bd-secondary"><img src="./images/arrow_left.png" alt="left"></li>
+          <li class="btn f-r-c-c bd-secondary"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/arrow_left.png" alt="left"></li>
           <li class="btn f-r-c-c bd-primary bg-primary">1</li>
           <li class="btn f-r-c-c bd-secondary">2</li>
           <li class="btn f-r-c-c bd-secondary">3</li>
-          <li class="btn f-r-c-c bd-secondary"><img src="./images/arrow_right.png" alt="right"></li>
+          <li class="btn f-r-c-c bd-secondary"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/arrow_right.png" alt="right"></li>
         </ul>
       </div>
     </div>
